--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Lecteur Port Série</title>
   <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/corbanbrook/dsp.js/dsp.js"></script> <!-- DSP.js -->
+  <script src="https://cdn.jsdelivr.net/gh/corbanbrook/dsp.js/dsp.js"></script>
   <style>
     body {
       font-family: sans-serif;
@@ -23,7 +23,7 @@
       margin-bottom: 10px;
       gap: 10px;
     }
-    #dataContainer {
+    #dataContainer, #allDataContainer {
       width: 100%;
       height: 300px;
       overflow-y: auto;
@@ -35,15 +35,8 @@
       margin-bottom: 10px;
     }
     #allDataContainer {
-      width: 100%;
-      height: 300px;
-      overflow-y: auto;
-      white-space: pre-wrap;
-      border: 1px solid #ccc;
-      padding: 10px;
       background-color: #eef6ff;
       margin-top: 10px;
-      box-sizing: border-box;
       display: none;
     }
     button, select, label {
@@ -54,29 +47,19 @@
       gap: 10px;
       margin-top: 10px;
     }
-    #spectrogram {
+    #spectrogram, #timePlot {
       width: 100%;
       height: 400px;
       margin-top: 20px;
     }
-    
-    <!-- Paramètres et graphique temporel -->
-    <div style="margin-top: 20px;">
-      <label for="timeWindow">Durée d'affichage (secondes) :</label>
-      <input type="number" id="timeWindow" value="30" min="1" max="600" step="1">
-      <button id="startTimePlot">Afficher le signal temporel</button>
-    </div>
-    <div id="timePlot" style="width: 100%; height: 400px; margin-top: 10px;"></div>
-      </style>
-    </head>
-    <body>
+  </style>
+</head>
+<body>
   <h2>Lecteur Port Série Web</h2>
 
-  <!-- Panel de contrôle -->
   <div class="control-panel">
     <button id="connectBtn">Choisir un port série</button>
     <button id="disconnectBtn" disabled>Déconnecter</button>
-
     <label for="baudrateSelect">Baudrate :</label>
     <select id="baudrateSelect">
       <option value="9600">9600</option>
@@ -87,10 +70,8 @@
     </select>
   </div>
 
-  <!-- Affichage des données reçues -->
   <div id="dataContainer"></div>
 
-  <!-- Actions sous les données -->
   <div class="actions">
     <button id="clearDataBtn">Effacer les données de l'affichage</button>
     <label>
@@ -100,11 +81,9 @@
     <button id="saveBtn" disabled>Télécharger les données</button>
   </div>
 
-  <!-- Affichage de toutes les données -->
   <button id="showAllBtn">Afficher toutes les données enregistrées</button>
   <div id="allDataContainer"></div>
 
-  <!-- Sélection de la colonne pour le graphique -->
   <div>
     <label for="columnSelect">Sélectionnez une colonne :</label>
     <select id="columnSelect">
@@ -118,8 +97,23 @@
     <button id="plotButton">Afficher le spectre de fréquence</button>
   </div>
 
-  <!-- Graphique de spectrométrie -->
   <div id="spectrogram"></div>
+
+  <div>
+    <label for="timeWindow">Durée (secondes) :</label>
+    <input type="number" id="timeWindow" value="30" min="1" max="300" style="width: 60px;">
+    <label for="timeColumnSelect">Colonne pour graphique temporel :</label>
+    <select id="timeColumnSelect">
+      <option value="0">Colonne 1 (Index 0)</option>
+      <option value="1">Colonne 2 (Index 1)</option>
+      <option value="2">Colonne 3 (Index 2)</option>
+      <option value="3">Colonne 4 (Index 3)</option>
+      <option value="4">Colonne 5 (Index 4)</option>
+      <option value="5">Colonne 6 (Index 5)</option>
+    </select>
+    <button id="startTimePlot">Démarrer affichage temporel</button>
+  </div>
+  <div id="timePlot"></div>
 
   <script>
     let port, reader;
@@ -129,9 +123,6 @@
     let displayedLines = [];
     let autoScrollEnabled = true;
     let allData = [];
-    let liveTimeData = [];      // Stocke les valeurs de la colonne sélectionnée
-    let liveTimeStamps = [];    // Stocke les timestamps (en secondes)
-    let timePlotInterval = null; // Pour gérer le rafraîchissement automatique
 
     const connectBtn = document.getElementById("connectBtn");
     const disconnectBtn = document.getElementById("disconnectBtn");
@@ -146,6 +137,12 @@
     const plotButton = document.getElementById("plotButton");
     const spectrogram = document.getElementById("spectrogram");
 
+    const timeWindowInput = document.getElementById("timeWindow");
+    const timeColumnSelect = document.getElementById("timeColumnSelect");
+    const timePlotDiv = document.getElementById("timePlot");
+    const startTimePlotBtn = document.getElementById("startTimePlot");
+    let timePlotInterval = null;
+
     connectBtn.addEventListener("click", async () => {
       try {
         port = await navigator.serial.requestPort();
@@ -156,6 +153,9 @@
         connectBtn.disabled = true;
         disconnectBtn.disabled = false;
         saveBtn.disabled = recordedData.trim() === "";
+
+        // Démarre l'affichage temporel automatiquement
+        startTimePlotBtn.click();
       } catch (err) {
         console.error("Erreur connexion série :", err);
         alert("Erreur connexion série : " + err.message);
@@ -182,6 +182,7 @@
       connectBtn.disabled = false;
       disconnectBtn.disabled = true;
       saveBtn.disabled = recordedData.trim() === "";
+      if (timePlotInterval) clearInterval(timePlotInterval);
     });
 
     scrollToggle.addEventListener("change", () => {
@@ -191,7 +192,6 @@
     async function readLoop() {
       const textDecoder = new TextDecoder();
       let buffer = "";
-
       while (keepReading && reader) {
         try {
           const { value, done } = await reader.read();
@@ -203,37 +203,20 @@
           for (let line of lines) {
             line = line.trim();
             if (!line) continue;
-
             if (!isRecording && line.includes("everything is ok")) {
               isRecording = true;
               recordedData = "";
               continue;
             }
-
             if (isRecording) {
               recordedData += line + "\n";
               saveBtn.disabled = false;
             }
-
             displayedLines.push(line);
-            allData.push(line);  // Stocker toutes les données pour traitement spectrométrique
-            const parts = line.split(";");
-            const colIndex = parseInt(columnSelect.value);
-            const value = parseFloat(parts[colIndex]);
-            
-            if (!isNaN(value)) {
-              const now = performance.now() / 1000; // Temps en secondes
-              liveTimeData.push(value);
-              liveTimeStamps.push(now);
-            }
-            if (displayedLines.length > 300) {
-              displayedLines.shift();
-            }
-
+            allData.push(line);
+            if (displayedLines.length > 300) displayedLines.shift();
             dataContainer.textContent = displayedLines.join("\n");
-            if (autoScrollEnabled) {
-              dataContainer.scrollTop = dataContainer.scrollHeight;
-            }
+            if (autoScrollEnabled) dataContainer.scrollTop = dataContainer.scrollHeight;
           }
         } catch (err) {
           console.error("Erreur lecture série :", err);
@@ -253,104 +236,69 @@
     });
 
     showAllBtn.addEventListener("click", () => {
-      if (recordedData.trim() === "") {
-        alert("Aucune donnée enregistrée à afficher.");
-        return;
-      }
+      if (recordedData.trim() === "") return alert("Aucune donnée enregistrée à afficher.");
       allDataContainer.style.display = "block";
       allDataContainer.textContent = recordedData;
       allDataContainer.scrollTop = allDataContainer.scrollHeight;
     });
 
-    // Effacer les données de l'affichage sans affecter recordedData
     clearDataBtn.addEventListener("click", () => {
-      displayedLines = [];  // Vider l'affichage
-      dataContainer.textContent = "";  // Effacer l'encadré
+      displayedLines = [];
+      dataContainer.textContent = "";
     });
 
     plotButton.addEventListener("click", () => {
-    const columnIndex = parseInt(columnSelect.value); // Index de la colonne sélectionnée
-    const values = allData.map(line => {
-      const parts = line.split(";");
-      const value = parseFloat(parts[columnIndex]);
-      if (isNaN(value)) {
-        console.log(`Donnée invalide à la ligne : ${line}`);
-      }
-      return value;
-    }).filter(value => !isNaN(value));
-  
-    if (values.length === 0) {
-      console.log('Aucune donnée valide extraite pour la colonne ' + columnIndex);
-      alert('Aucune donnée valide pour cette colonne.');
-      return;
-    }
-  
-    // Calcul FFT sur les valeurs extraites
-    const fftSize = Math.pow(2, Math.floor(Math.log2(values.length))); // doit être une puissance de 2
-    const fft = new FFT(fftSize, 256); // 256 = taux d’échantillonnage Hz
-    fft.forward(values.slice(0, fftSize));
-  
-    // Calcul des fréquences
-    const sampleRate = 256; // Fréquence d'échantillonnage en Hz (doit correspondre à ton système)
-    const freqs = Array.from({ length: fftSize / 2 }, (_, i) => (i * sampleRate) / fftSize);
-  
-    const amps = fft.spectrum.slice(0, fftSize / 2); // Prendre uniquement la moitié positive du spectre
-  
-    // Afficher le graphique
-    const data = [{
-      x: freqs,
-      y: amps,
-      type: 'scatter',
-      mode: 'lines',
-      name: 'Spectre de fréquence'
-    }];
-    const layout = {
-      title: 'Spectre de Fréquence',
-      xaxis: { title: 'Fréquence (Hz)' },
-      yaxis: { title: 'Amplitude' }
-    };
-    Plotly.newPlot(spectrogram, data, layout);
-  });
-    document.getElementById("startTimePlot").addEventListener("click", () => {
-  if (timePlotInterval) {
-    clearInterval(timePlotInterval);
-  }
+      const columnIndex = parseInt(columnSelect.value);
+      const values = allData.map(line => {
+        const parts = line.split(";");
+        const value = parseFloat(parts[columnIndex]);
+        return isNaN(value) ? null : value;
+      }).filter(v => v !== null);
 
-  const timeWindowSec = parseFloat(document.getElementById("timeWindow").value) || 30;
+      if (values.length === 0) return alert('Aucune donnée valide pour cette colonne.');
+      const fftSize = Math.pow(2, Math.floor(Math.log2(values.length)));
+      const fft = new FFT(fftSize, 256);
+      fft.forward(values.slice(0, fftSize));
+      const freqs = Array.from({ length: fftSize / 2 }, (_, i) => (i * 256) / fftSize);
+      const amps = fft.spectrum.slice(0, fftSize / 2);
+      Plotly.newPlot(spectrogram, [{ x: freqs, y: amps, type: 'scatter', mode: 'lines' }], {
+        title: 'Spectre de Fréquence',
+        xaxis: { title: 'Fréquence (Hz)' },
+        yaxis: { title: 'Amplitude' }
+      });
+    });
 
-  timePlotInterval = setInterval(() => {
-    const now = performance.now() / 1000;
+    startTimePlotBtn.addEventListener("click", () => {
+      if (timePlotInterval) clearInterval(timePlotInterval);
+      timePlotInterval = setInterval(() => {
+        const columnIndex = parseInt(timeColumnSelect.value);
+        const sampleRate = 256;
+        const timeWindowSeconds = parseInt(timeWindowInput.value) || 30;
+        const numSamples = timeWindowSeconds * sampleRate;
 
-    // Supprimer les données plus vieilles que la fenêtre
-    while (liveTimeStamps.length > 0 && (now - liveTimeStamps[0]) > timeWindowSec) {
-      liveTimeStamps.shift();
-      liveTimeData.shift();
-    }
+        const values = allData.map(line => {
+          const parts = line.split(";");
+          const value = parseFloat(parts[columnIndex]);
+          return isNaN(value) ? null : value;
+        }).filter(v => v !== null);
 
-    // Créer les traces
-    const trace = {
-      x: liveTimeStamps.map(t => now - t).map(t => -t), // affichage avec temps qui défile vers la droite
-      y: liveTimeData,
-      mode: 'lines',
-      type: 'scatter',
-      name: 'Signal'
-    };
+        const recentValues = values.slice(-numSamples);
+        const timestamps = recentValues.map((_, i) => i / sampleRate);
 
-    const layout = {
-      title: `Évolution temporelle sur ${timeWindowSec} s`,
-      xaxis: {
-        title: 'Temps (s)',
-        autorange: 'reversed',  // Pour que les nouvelles données soient à droite
-      },
-      yaxis: {
-        title: 'Valeur',
-        autorange: true
-      }
-    };
-
-    Plotly.newPlot("timePlot", [trace], layout);
-  }, 500); // met à jour toutes les 500 ms
-});
+        if (recentValues.length > 0) {
+          Plotly.newPlot(timePlotDiv, [{
+            x: timestamps,
+            y: recentValues,
+            type: 'scatter',
+            mode: 'lines'
+          }], {
+            title: `Graphique temporel - Colonne ${columnIndex + 1}`,
+            xaxis: { title: "Temps (s)" },
+            yaxis: { title: "Amplitude" }
+          });
+        }
+      }, 500);
+    });
   </script>
 </body>
 </html>
