--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       font-family: sans-serif;
       margin: 20px;
       max-width: 800px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
     }
     h2 {
       margin-bottom: 20px;
@@ -27,12 +30,13 @@
       white-space: pre-wrap;
       border: 1px solid #ccc;
       padding: 10px;
-      box-sizing: border-box;
       background-color: #f9f9f9;
+      box-sizing: border-box;
       margin-bottom: 10px;
     }
     #allDataContainer {
       background-color: #eef6ff;
+      margin-top: 10px;
       display: none;
     }
     button, select, label {
@@ -43,7 +47,7 @@
       gap: 10px;
       margin-top: 10px;
     }
-    #spectrogram, #timeGraph {
+    #spectrogram, #timePlot {
       width: 100%;
       height: 400px;
       margin-top: 20px;
@@ -56,7 +60,6 @@
   <div class="control-panel">
     <button id="connectBtn">Choisir un port série</button>
     <button id="disconnectBtn" disabled>Déconnecter</button>
-
     <label for="baudrateSelect">Baudrate :</label>
     <select id="baudrateSelect">
       <option value="9600">9600</option>
@@ -87,15 +90,30 @@
       <option value="0">Colonne 1 (Index 0)</option>
       <option value="1">Colonne 2 (Index 1)</option>
       <option value="2">Colonne 3 (Index 2)</option>
-      <option value="3" selected>Colonne 4 (Index 3)</option>
+      <option value="3">Colonne 4 (Index 3)</option>
       <option value="4">Colonne 5 (Index 4)</option>
       <option value="5">Colonne 6 (Index 5)</option>
     </select>
     <button id="plotButton">Afficher le spectre de fréquence</button>
   </div>
 
-  <div id="timeGraph"></div>
   <div id="spectrogram"></div>
+
+  <div>
+    <label for="timeWindow">Durée (secondes) :</label>
+    <input type="number" id="timeWindow" value="30" min="1" max="300" style="width: 60px;">
+    <label for="timeColumnSelect">Colonne pour graphique temporel :</label>
+    <select id="timeColumnSelect">
+      <option value="0">Colonne 1 (Index 0)</option>
+      <option value="1">Colonne 2 (Index 1)</option>
+      <option value="2">Colonne 3 (Index 2)</option>
+      <option value="3">Colonne 4 (Index 3)</option>
+      <option value="4">Colonne 5 (Index 4)</option>
+      <option value="5">Colonne 6 (Index 5)</option>
+    </select>
+    <button id="startTimePlot">Démarrer affichage temporel</button>
+  </div>
+  <div id="timePlot"></div>
 
   <script>
     let port, reader;
@@ -118,7 +136,12 @@
     const columnSelect = document.getElementById("columnSelect");
     const plotButton = document.getElementById("plotButton");
     const spectrogram = document.getElementById("spectrogram");
-    const timeGraph = document.getElementById("timeGraph");
+
+    const timeWindowInput = document.getElementById("timeWindow");
+    const timeColumnSelect = document.getElementById("timeColumnSelect");
+    const timePlotDiv = document.getElementById("timePlot");
+    const startTimePlotBtn = document.getElementById("startTimePlot");
+    let timePlotInterval = null;
 
     connectBtn.addEventListener("click", async () => {
       try {
@@ -130,6 +153,9 @@
         connectBtn.disabled = true;
         disconnectBtn.disabled = false;
         saveBtn.disabled = recordedData.trim() === "";
+
+        // Démarre l'affichage temporel automatiquement
+        startTimePlotBtn.click();
       } catch (err) {
         console.error("Erreur connexion série :", err);
         alert("Erreur connexion série : " + err.message);
@@ -156,6 +182,7 @@
       connectBtn.disabled = false;
       disconnectBtn.disabled = true;
       saveBtn.disabled = recordedData.trim() === "";
+      if (timePlotInterval) clearInterval(timePlotInterval);
     });
 
     scrollToggle.addEventListener("change", () => {
@@ -165,7 +192,6 @@
     async function readLoop() {
       const textDecoder = new TextDecoder();
       let buffer = "";
-
       while (keepReading && reader) {
         try {
           const { value, done } = await reader.read();
@@ -177,34 +203,20 @@
           for (let line of lines) {
             line = line.trim();
             if (!line) continue;
-
             if (!isRecording && line.includes("everything is ok")) {
               isRecording = true;
               recordedData = "";
-              allData = [];
               continue;
             }
-
             if (isRecording) {
               recordedData += line + "\n";
-              allData.push(line);
               saveBtn.disabled = false;
-
-              if (allData.length >= 256 * 30) { // 30 secondes à 256 Hz
-                plotFrequencySpectrum();
-                plotTimeGraph();
-              }
             }
-
             displayedLines.push(line);
-            if (displayedLines.length > 300) {
-              displayedLines.shift();
-            }
-
+            allData.push(line);
+            if (displayedLines.length > 300) displayedLines.shift();
             dataContainer.textContent = displayedLines.join("\n");
-            if (autoScrollEnabled) {
-              dataContainer.scrollTop = dataContainer.scrollHeight;
-            }
+            if (autoScrollEnabled) dataContainer.scrollTop = dataContainer.scrollHeight;
           }
         } catch (err) {
           console.error("Erreur lecture série :", err);
@@ -224,10 +236,7 @@
     });
 
     showAllBtn.addEventListener("click", () => {
-      if (recordedData.trim() === "") {
-        alert("Aucune donnée enregistrée à afficher.");
-        return;
-      }
+      if (recordedData.trim() === "") return alert("Aucune donnée enregistrée à afficher.");
       allDataContainer.style.display = "block";
       allDataContainer.textContent = recordedData;
       allDataContainer.scrollTop = allDataContainer.scrollHeight;
@@ -238,82 +247,29 @@
       dataContainer.textContent = "";
     });
 
-    plotButton.addEventListener("click", plotFrequencySpectrum);
-
-    function plotFrequencySpectrum() {
+    plotButton.addEventListener("click", () => {
       const columnIndex = parseInt(columnSelect.value);
       const values = allData.map(line => {
         const parts = line.split(";");
-        return parseFloat(parts[columnIndex]);
-      }).filter(v => !isNaN(v));
+        const value = parseFloat(parts[columnIndex]);
+        return isNaN(value) ? null : value;
+      }).filter(v => v !== null);
 
+      if (values.length === 0) return alert('Aucune donnée valide pour cette colonne.');
       const fftSize = Math.pow(2, Math.floor(Math.log2(values.length)));
       const fft = new FFT(fftSize, 256);
       fft.forward(values.slice(0, fftSize));
-      const freqs = Array.from({ length: fftSize / 2 }, (_, i) => i * 256 / fftSize);
+      const freqs = Array.from({ length: fftSize / 2 }, (_, i) => (i * 256) / fftSize);
       const amps = fft.spectrum.slice(0, fftSize / 2);
-
-      Plotly.newPlot(spectrogram, [{
-        x: freqs,
-        y: amps,
-        type: 'scatter',
-        mode: 'lines',
-        name: 'Spectre de fréquence'
-      }], {
+      Plotly.newPlot(spectrogram, [{ x: freqs, y: amps, type: 'scatter', mode: 'lines' }], {
         title: 'Spectre de Fréquence',
         xaxis: { title: 'Fréquence (Hz)' },
         yaxis: { title: 'Amplitude' }
       });
-    }
-
-    function plotTimeGraph() {
-      const columnIndex = parseInt(columnSelect.value);
-      const values = allData.map(line => {
-        const parts = line.split(";");
-        return parseFloat(parts[columnIndex]);
-      }).filter(v => !isNaN(v));
-
-      const times = values.map((_, i) => i / 256); // En secondes
-
-      Plotly.newPlot(timeGraph, [{
-        x: times,
-        y: values,
-        type: 'scatter',
-        mode: 'lines',
-        name: 'Signal temporel'
-      }], {
-        title: 'Signal dans le Temps (30s)',
-        xaxis: { title: 'Temps (s)' },
-        yaxis: { title: 'Amplitude' }
-      });
-    }
-   <!-- === GRAPHIQUE TEMPOREL TEMPS RÉEL === -->
-  <div>
-    <label for="timeWindow">Durée (secondes) :</label>
-    <input type="number" id="timeWindow" value="30" min="1" max="300" style="width: 60px;">
-    <label for="timeColumnSelect">Colonne pour graphique temporel :</label>
-    <select id="timeColumnSelect">
-      <option value="0">Colonne 1 (Index 0)</option>
-      <option value="1">Colonne 2 (Index 1)</option>
-      <option value="2">Colonne 3 (Index 2)</option>
-      <option value="3">Colonne 4 (Index 3)</option>
-      <option value="4">Colonne 5 (Index 4)</option>
-      <option value="5">Colonne 6 (Index 5)</option>
-    </select>
-    <button id="startTimePlot">Démarrer affichage temporel</button>
-  </div>
-  <div id="timePlot" style="width:100%;height:400px;margin-top:20px;"></div>
-
-  <script>
-    let timePlotInterval = null;
-    const timeWindowInput = document.getElementById("timeWindow");
-    const timeColumnSelect = document.getElementById("timeColumnSelect");
-    const timePlotDiv = document.getElementById("timePlot");
-    const startTimePlotBtn = document.getElementById("startTimePlot");
+    });
 
     startTimePlotBtn.addEventListener("click", () => {
-      if (timePlotInterval) clearInterval(timePlotInterval); // Clear previous if any
-
+      if (timePlotInterval) clearInterval(timePlotInterval);
       timePlotInterval = setInterval(() => {
         const columnIndex = parseInt(timeColumnSelect.value);
         const sampleRate = 256;
@@ -324,41 +280,24 @@
           const parts = line.split(";");
           const value = parseFloat(parts[columnIndex]);
           return isNaN(value) ? null : value;
-        }).filter(val => val !== null);
+        }).filter(v => v !== null);
 
         const recentValues = values.slice(-numSamples);
         const timestamps = recentValues.map((_, i) => i / sampleRate);
 
         if (recentValues.length > 0) {
-          const data = [{
+          Plotly.newPlot(timePlotDiv, [{
             x: timestamps,
             y: recentValues,
             type: 'scatter',
-            mode: 'lines',
-            name: `Colonne ${columnIndex + 1}`
-          }];
-          const layout = {
+            mode: 'lines'
+          }], {
             title: `Graphique temporel - Colonne ${columnIndex + 1}`,
             xaxis: { title: "Temps (s)" },
             yaxis: { title: "Amplitude" }
-          };
-          Plotly.newPlot(timePlotDiv, data, layout);
+          });
         }
-      }, 500); // met à jour toutes les 500 ms
-    });
-
-    // Auto-start on connect
-    connectBtn.addEventListener("click", () => {
-      const evt = new Event("click");
-      startTimePlotBtn.dispatchEvent(evt);
-    });
-
-    // Stop on disconnect
-    disconnectBtn.addEventListener("click", () => {
-      if (timePlotInterval) {
-        clearInterval(timePlotInterval);
-        timePlotInterval = null;
-      }
+      }, 500);
     });
   </script>
 </body>
